# LLM_2025_Synthetic_dataset

./: .env  .gitignore  CLAUDE.md  datasets_make.py  debug_json_parsing.py  deepseek_r1_0528_qwen8b.py  gemini_complete_dataset.json  gemini_complete_dataset_001.json  gemini_dataset.json  gemini_dataset.py  gemini_dataset_0731.json  gemini_dataset_0731_001.json  gemini_datasets_input_output.py  math_dataset.json  pyproject.toml  reasoning_dataset_generator.py  self_instruct_math_dataset.py  two_stage_math_dataset_generator.py
