[project]
name = "llm2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.28.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
